# sesamum

./: .gitignore  README.md  pyproject.toml  verify.py
src/sesamum/: __init__.py  core.py
src/sesamum.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/sesamum/readers/: base.py  lsm.py  nd2.py  tiff.py
