[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sesamum"
version = "0.1.0"
description = "A lightweight bioformats-like library for Python"
authors = [{name = "Austin E. Y. T. Lefebvre", email = "austin.e.lefebvre+sesamum@gmail.com"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "tifffile",
    "nd2",
    "twine>=6.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
]
